Closed Bug 330852 Opened 20 years ago Closed 20 years ago

raising assertion when clicking anytime

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: regression)

Attachments

(1 file)

This is regression of bug 321468.
Status: NEW → ASSIGNED
Attached patch Patch rv1.0Splinter Review
This may fix this.
Attachment #215418 - Flags: superreview?(dbaron)
Attachment #215418 - Flags: review?(dbaron)
Attachment #215418 - Flags: superreview?(dbaron)
Attachment #215418 - Flags: superreview+
Attachment #215418 - Flags: review?(dbaron)
Attachment #215418 - Flags: review+
checked-in. Thanks.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: