Bug 330852 raising assertion when clicking anytime r+sr=dbaron